--- a/index.html
+++ b/index.html
@@ -9,121 +9,136 @@
 </head>
 <body>
     <!--шапка-->
-    <header>
-        <nav class="list">
-            <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web    </span><span style="color:#000000;">Studio</span></span></a>
-                <ul>
-                    <li><a href=""><span class="header-text current">Студия</span></a></li>
-                    <li><a href="./portfolio.html"><span class="header-text">Портфолио</span></a></li>
-                    <li><a href=""><span class="header-text">Контакты</span></a></li>
+    <header class="link">
+        <nav class="main-nav section">
+            <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
+                <ul class="list-line list">
+                    <li class="item"><a href=""><span class="header-text current">Студия</span></a></li>
+                    <li class="item"><a href="./portfolio.html"><span class="header-text">Портфолио</span></a></li>
+                    <li class="item"><a href=""><span class="header-text">Контакты</span></a></li>
                 </ul>
+                    <ul class="auth-nav list">
+                        <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
+                        <li class="item"><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
+                    </ul>
         </nav>
-        <ul class="list">
-            <li><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
-            <li><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
-        </ul>
     </header>
-<main>
+<main class="link">
     <!--Заказать услугу-->
-    <section class="list">
-    <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-    <a href="" class="button">Заказать услугу</a>
+    <section>
+        <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <div class="button-centered">
+            <a href="" class="button-hero">Заказать услугу</a>
+        </div>
     </section>
     <!--иконки-->
     <section>
-    <ul>
-        <li>
-        <img src="./picture/4picture/Group.svg" alt="">
-        <h3 class="subtitle-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-        <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        <li>
-        <img src="./picture/4picture/clock1.svg" alt="">
-        <h3 class="subtitle-text">ПУНКТУАЛЬНОСТЬ</h3>
-        <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li> <img src="./picture/4picture/diagram1.svg" alt="">
-        <h3 class="subtitle-text">ПЛАНИРОВАНИЕ</h3>
-        <p class="main-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li> <img src="./picture/4picture/astronaut1.svg" alt="">
-        <h3 class="subtitle-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-        <p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-    </ul>
+        <div class="section">
+            <ul class="icon-style">
+                <li class="item">
+                    <img src="./picture/4picture/Group.svg" alt="">
+                    <h3 class="subtitle-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                    <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="item">
+                    <img src="./picture/4picture/clock1.svg" alt="">
+                    <h3 class="subtitle-text">ПУНКТУАЛЬНОСТЬ</h3>
+                    <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="item">
+                    <img src="./picture/4picture/diagram1.svg" alt="">
+                    <h3 class="subtitle-text">ПЛАНИРОВАНИЕ</h3>
+                    <p class="main-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li class="item">
+                    <img src="./picture/4picture/astronaut1.svg" alt="">
+                    <h3 class="subtitle-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                    <p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <!--Занятия-->
     <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
-            <li><img src="./picture/png/telephon.png" alt=""><span class="subtitle-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</span></li>
-            <li><img src="./picture/png/television.png" alt=""><span class="subtitle-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЕ</span></li>
-        </ul>
+        <div class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list-project">
+                <li class="item"><img src="./picture/png/nout.png" alt=""><span class="subtitle-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</span></li>
+                <li class="item"><img src="./picture/png/telephon.png" alt=""><span class="subtitle-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</span></li>
+                <li class="item"><img src="./picture/png/television.png" alt=""><span class="subtitle-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЕ</span></li>
+            </ul>
+        </div>
     </section>
     <!--Команда-->
     <section>
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-            <li> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
-                <h3 class="contact-subtitle">Николай Кучеренко</h3>
-                    <p class="contact-text">Product Designer</p>
-                        <ul class="list">
-                            <li><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse3.svg" alt="twitter"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
-                        </ul>
-            </li>
-            <li> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
-                <h3 class="contact-subtitle">Ольга Иванова</h3>
-                    <p class="contact-text">Frontend Developer</p>
-                        <ul class="list">
-                            <li><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
-                        </ul>
-            </li>
-            <li> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
-                <h3 class="contact-subtitle">Андрей Шевченко</h3>
-                    <p class="contact-text">Marketing</p>
-                        <ul class="list">
-                            <li><a href=""><img src="./picture/soc/Ellipse1.svg" alt="twitter"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse2.svg" alt="instagram"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
-                        </ul>
-            </li>
-            <li> <img src="./picture/people/4.jpg" alt="Иван Николаев">
-                <h3 class="contact-subtitle">Иван Николаев</h3>
-                    <p class="contact-text">UI Designer</p>
-                        <ul class="list">
-                            <li><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook   "></a></li>
-                            <li><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
-                        </ul>
-            </li>
-        </ul>
+        <div class="section">
+            <div class="section-comand">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="comand-style">
+                    <li class="item"> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
+                        <h3 class="contact-subtitle">Николай Кучеренко</h3>
+                            <p class="contact-text">Product Designer</p>
+                                <ul class="list-soc">
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                </ul>
+                    </li>
+                    <li class="item"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
+                        <h3 class="contact-subtitle">Ольга Иванова</h3>
+                            <p class="contact-text">Frontend Developer</p>
+                                <ul class="list-soc">
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                </ul>
+                    </li>
+                    <li class="item"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
+                        <h3 class="contact-subtitle">Андрей Шевченко</h3>
+                            <p class="contact-text">Marketing</p>
+                                <ul class="list-soc">
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                </ul>
+                    </li>
+                    <li class="item"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
+                        <h3 class="contact-subtitle">Иван Николаев</h3>
+                            <p class="contact-text">UI Designer</p>
+                                <ul class="list-soc">
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook   "></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
     <!--клиенты-->
         <section>
-            <h2 class="section-title">Постоянные клиенты</h2>
-            <ul>
-                <li><img src="./picture/customer/Client1.svg" alt=""></li>
-                <li><img src="./picture/customer/Client2.svg" alt=""></li>
-                <li><img src="./picture/customer/Client3.svg" alt=""></li>
-                <li><img src="./picture/customer/Client4.svg" alt=""></li>
-                <li><img src="./picture/customer/Client5.svg" alt=""></li>
-                <li><img src="./picture/customer/Client6.svg" alt=""></li>
-            </ul>
+            <div class="section">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list-сustomer">
+                    <li class="item"><img src="./picture/customer/Client1.svg" alt=""></li>
+                    <li class="item"><img src="./picture/customer/Client2.svg" alt=""></li>
+                    <li class="item"><img src="./picture/customer/Client3.svg" alt=""></li>
+                    <li class="item"><img src="./picture/customer/Client4.svg" alt=""></li>
+                    <li class="item"><img src="./picture/customer/Client5.svg" alt=""></li>
+                    <li class="item"><img src="./picture/customer/Client6.svg" alt=""></li>
+                </ul>
+            </div>
         </section>
 </main>
-    <footer class="bg-footer">
-        <div class="list">
+    <footer class="link">
+        <div>
             <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
                 <address>
-                    <ul class="list">
+                    <ul>
                         <li class="main-text" style="color: #FFFFFF; font-style: normal;">г. Киев, пр-т Леси Украинки, 26</li>
                         <li><a href="mailto:info@devstudio.com"><span class="contact">info@example.com</span></a></li>
                         <li><a href="tel:+380961111111"><span class="contact">+38 099 111 11 11</span></a></li>
@@ -139,7 +154,7 @@
                     <li><img src="./picture/soc/Ellipse4.svg" alt=""></li>
                 </ul>
         </div>
-        <div class="list">
+        <div>
             <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
             <a href=""  class="button">подписаться</a>
         </div>
