--- a/portfolio.html
+++ b/portfolio.html
@@ -9,39 +9,45 @@
 </head>
 <body>
 <!--шапка-->
-    <header>
-        <nav class="list">
-            <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
-                <ul>
-                    <li><a href="./index.html"><span class="header-text">Студия</span></a></li>
-                    <li><a href=""><span class="header-text current">Портфолио</span></a></li>
-                    <li><a href=""><span class="header-text">Контакты</span></a></li>
+<header class="link">
+    <nav class="main-nav section">
+        <a href=""><span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#000000;">Studio</span></span></a>
+            <ul class="list-line list">
+                <li class="item"><a href="./index.html"><span class="header-text">Студия</span></a></li>
+                <li class="item"><a href=""><span class="header-text current">Портфолио</span></a></li>
+                <li class="item"><a href=""><span class="header-text">Контакты</span></a></li>
+            </ul>
+                <ul class="auth-nav list">
+                    <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
+                    <li class="item"><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
                 </ul>
-        </nav>
-        <ul class="list">
-            <li><a href="mailto:info@devstudio.com"><span class="contact">info@devstudio.com</span></a></li>
-            <li><a href="tel:+380961111111"> <span class="contact">+38 096 111 11 11</span></a></li>
-        </ul>
-    </header>
+    </nav>
+</header>
     <main>
-        <ul>
-            <li><button>Все</button></li>
-            <li><button>Веб-сайты</button></li>
-            <li><button>Приложения</button></li>
-            <li><button>Дизайн</button></li>
-            <li><button>Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-            <li><a href=""><img src="./picture/portfolio/img-1.png" alt=""></a><h3 class="portfolio-subtitle">Технокряк</h3><span class="portfolio-text">Веб-сайт</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-2.png" alt=""></a><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3><span class="portfolio-text">Дизайн</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-3.png" alt=""></a><h3 class="portfolio-subtitle">Ресторан Seafood</h3><span class="portfolio-text">Приложение</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-4.png" alt=""></a><h3 class="portfolio-subtitle">Проект Prime</h3><span class="portfolio-text">Маркетинг</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-5.png" alt=""></a><h3 class="portfolio-subtitle">Проект Boxes</h3><span class="portfolio-text">Приложение</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-6.png" alt=""></a><h3 class="portfolio-subtitle">Inspiration has no Borders</h3><span class="portfolio-text">Веб-сайт</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-7.png" alt=""></a><h3 class="portfolio-subtitle">Издание Limited Edition</h3><span class="portfolio-text">Дизайн</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-8.png" alt=""></a><h3 class="portfolio-subtitle">Проект LAB</h3><span class="portfolio-text">Маркетинг</span></li>
-            <li><a href=""><img src="./picture/portfolio/img-9.png" alt=""></a><h3 class="portfolio-subtitle">Growing Business</h3><span class="portfolio-text">Приложение</span></li>
-        </ul>
+<!--Кнопки-->
+        <section class="button-margin">
+            <ul class="button-list">
+                <li class="item"><button class="button-portfolio" style="width: 73px;">Все</button></li>
+                <li class="item"><button class="button-portfolio" style="width: 128px;">Веб-сайты</button></li>
+                <li class="item"><button class="button-portfolio" style="width: 145px;">Приложения</button></li>
+                <li class="item"><button class="button-portfolio" style="width: 103px;">Дизайн</button></li>
+                <li class="item"><button class="button-portfolio" style="width: 130px;">Маркетинг</button></li>
+            </ul>
+        </section>
+<!--Главный контент-->
+        <section class="section">
+            <ul class="list portfolio-list">
+                <li class="item"><a href=""><img src="./picture/portfolio/img-1.png" alt=""></a><h3 class="portfolio-subtitle">Технокряк</h3><span class="portfolio-text">Веб-сайт</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-2.png" alt=""></a><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3><span class="portfolio-text">Дизайн</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-3.png" alt=""></a><h3 class="portfolio-subtitle">Ресторан Seafood</h3><span class="portfolio-text">Приложение</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-4.png" alt=""></a><h3 class="portfolio-subtitle">Проект Prime</h3><span class="portfolio-text">Маркетинг</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-5.png" alt=""></a><h3 class="portfolio-subtitle">Проект Boxes</h3><span class="portfolio-text">Приложение</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-6.png" alt=""></a><h3 class="portfolio-subtitle">Inspiration has no Borders</h3><span class="portfolio-text">Веб-сайт</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-7.png" alt=""></a><h3 class="portfolio-subtitle">Издание Limited Edition</h3><span class="portfolio-text">Дизайн</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-8.png" alt=""></a><h3 class="portfolio-subtitle">Проект LAB</h3><span class="portfolio-text">Маркетинг</span></li>
+                <li class="item"><a href=""><img src="./picture/portfolio/img-9.png" alt=""></a><h3 class="portfolio-subtitle">Growing Business</h3><span class="portfolio-text">Приложение</span></li>
+            </ul>
+        </section>
     </main>
     <footer class="bg-footer">
         <div class="list">
