--- a/index.html
+++ b/index.html
@@ -135,28 +135,30 @@
         </section>
 </main>
     <footer class="link">
-        <div>
-            <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
-                <address>
-                    <ul>
-                        <li class="main-text" style="color: #FFFFFF; font-style: normal;">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li><a href="mailto:info@devstudio.com"><span class="contact">info@example.com</span></a></li>
-                        <li><a href="tel:+380961111111"><span class="contact">+38 099 111 11 11</span></a></li>
+        <div class="section">
+            <div class="footer-section">
+                <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
+                    <address>
+                        <ul class="footer-adress">
+                            <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@example.com</span></a></li>
+                            <li class="item"><a href="tel:+380961111111"><span class="contact">+38 099 111 11 11</span></a></li>
+                        </ul>
+                    </address>
+            </div>
+            <div class="footer-soc">
+                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
+                    <ul class="list-soc">
+                        <li class="item"><img src="./picture/soc/Ellipse1.svg" alt="instagram"></li>
+                        <li class="item"><img src="./picture/soc/Ellipse2.svg" alt="twitter"></li>
+                        <li class="item"><img src="./picture/soc/Ellipse3.svg" alt="facebook"></li>
+                        <li class="item"><img src="./picture/soc/Ellipse4.svg" alt=""></li>
                     </ul>
-                </address>
-        </div>
-        <div>
-            <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
-                <ul>
-                    <li><img src="./picture/soc/Ellipse1.svg" alt="instagram"></li>
-                    <li><img src="./picture/soc/Ellipse2.svg" alt="twitter"></li>
-                    <li><img src="./picture/soc/Ellipse3.svg" alt="facebook"></li>
-                    <li><img src="./picture/soc/Ellipse4.svg" alt=""></li>
-                </ul>
-        </div>
-        <div>
-            <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
-            <a href=""  class="button">подписаться</a>
+            </div>
+            <div class="footer-link">
+                <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
+                <a href=""  class="button">подписаться</a>
+            </div>
         </div>
     </footer>
 </body>
