--- a/index.html
+++ b/index.html
@@ -79,40 +79,40 @@
                         <h3 class="contact-subtitle">Николай Кучеренко</h3>
                             <p class="contact-text">Product Designer</p>
                                 <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
                     <li class="item"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
                         <h3 class="contact-subtitle">Ольга Иванова</h3>
                             <p class="contact-text">Frontend Developer</p>
                                 <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
                     <li class="item"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
                         <h3 class="contact-subtitle">Андрей Шевченко</h3>
                             <p class="contact-text">Marketing</p>
                                 <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
                     <li class="item"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
                         <h3 class="contact-subtitle">Иван Николаев</h3>
                             <p class="contact-text">UI Designer</p>
                                 <ul class="list-soc">
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse1.svg" alt="instagram"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse2.svg" alt="twitter"></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse3.svg" alt="facebook   "></a></li>
-                                    <li class="item"><a href=""><img src="./picture/soc/Ellipse4.svg" alt="in"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse1.svg" alt="instagram"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse2.svg" alt="twitter"></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse3.svg" alt="facebook   "></a></li>
+                                    <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
                 </ul>
@@ -135,28 +135,30 @@
         </section>
 </main>
     <footer class="link">
-        <div>
-            <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
-                <address>
-                    <ul>
-                        <li class="main-text" style="color: #FFFFFF; font-style: normal;">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li><a href="mailto:info@devstudio.com"><span class="contact">info@example.com</span></a></li>
-                        <li><a href="tel:+380961111111"><span class="contact">+38 099 111 11 11</span></a></li>
+        <div class="section">
+            <div class="footer-section">
+                <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
+                    <address>
+                        <ul class="footer-adress">
+                            <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="item"><a href="mailto:info@devstudio.com"><span class="contact">info@example.com</span></a></li>
+                            <li class="item"><a href="tel:+380961111111"><span class="contact">+38 099 111 11 11</span></a></li>
+                        </ul>
+                    </address>
+            </div>
+            <div class="footer-soc">
+                <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
+                    <ul class="list-soc">
+                        <li class="item"><img src="./picture/soc/footer-Ellipse1.svg" alt="instagram"></li>
+                        <li class="item"><img src="./picture/soc/footer-Ellipse2.svg" alt="twitter"></li>
+                        <li class="item"><img src="./picture/soc/footer-Ellipse3.svg" alt="facebook"></li>
+                        <li class="item"><img src="./picture/soc/footer-Ellipse4.svg" alt=""></li>
                     </ul>
-                </address>
-        </div>
-        <div>
-            <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
-                <ul>
-                    <li><img src="./picture/soc/Ellipse1.svg" alt="instagram"></li>
-                    <li><img src="./picture/soc/Ellipse2.svg" alt="twitter"></li>
-                    <li><img src="./picture/soc/Ellipse3.svg" alt="facebook"></li>
-                    <li><img src="./picture/soc/Ellipse4.svg" alt=""></li>
-                </ul>
-        </div>
-        <div>
-            <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
-            <a href=""  class="button">подписаться</a>
+            </div>
+            <div class="footer-link">
+                <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
+                <a href=""  class="button">подписаться</a>
+            </div>
         </div>
     </footer>
 </body>
