--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,6 @@
                 <a href=""  class="button">подписаться</a>
             </div>
         </div>
-    </footer
+    </footer>
 </body>
 </html>
