--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,7 @@
         <div class="section">
             <div class="footer-section">
                 <a href=""> <span class="web-logo"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></span></a>
+<!--Адресс-->
                     <address>
                         <ul class="footer-adress">
                             <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -61,6 +62,7 @@
                         </ul>
                     </address>
             </div>
+<!--Присойденяйтесь-->
             <div class="footer-soc">
                 <h3 class="subtitle-text" style="color: #FFFFFF;">ПРИСОЙДЕНЯЙТЕСЬ</h3>
                     <ul class="list-soc">
@@ -70,6 +72,7 @@
                         <li class="item"><img src="./picture/soc/footer-Ellipse4.svg" alt=""></li>
                     </ul>
             </div>
+<!--Рассылка-->
             <div class="footer-link">
                 <h3 class="subtitle-text">ПРИСОЙДЕНИТЕСЬ НА РАССЫЛКУ</h3>
                 <a href=""  class="button">подписаться</a>
