--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 <main class="link">
     <!--Заказать услугу-->
-    <section>
+    <section class="hero">
         <h1 class="efect-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <div class="button-centered">
             <a href="" class="button-hero">Заказать услугу</a>
@@ -36,22 +36,30 @@
         <div class="section">
             <ul class="icon-style">
                 <li class="item">
-                    <img src="./picture/4picture/Group.svg" alt="">
+                    <div class="icon">
+                        <img src="./picture/4picture/Group.svg" alt="">
+                    </div>
                     <h3 class="subtitle-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="item">
-                    <img src="./picture/4picture/clock1.svg" alt="">
+                    <div class="icon">
+                        <img src="./picture/4picture/clock1.svg" alt="">
+                    </div>
                     <h3 class="subtitle-text">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="item">
-                    <img src="./picture/4picture/diagram1.svg" alt="">
+                    <div class="icon">
+                        <img src="./picture/4picture/diagram1.svg" alt="">
+                    </div>
                     <h3 class="subtitle-text">ПЛАНИРОВАНИЕ</h3>
                     <p class="main-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="item">
-                    <img src="./picture/4picture/astronaut1.svg" alt="">
+                    <div class="icon">
+                        <img src="./picture/4picture/astronaut1.svg" alt="">
+                    </div>
                     <h3 class="subtitle-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -75,7 +83,7 @@
             <div class="section-comand">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="comand-style">
-                    <li class="item"> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
+                    <li class="item-border"> <img src="./picture/people/1.jpg" alt="Николай Кучеренко">
                         <h3 class="contact-subtitle">Николай Кучеренко</h3>
                             <p class="contact-text">Product Designer</p>
                                 <ul class="list-soc">
@@ -85,7 +93,7 @@
                                     <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
-                    <li class="item"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
+                    <li class="item-border"> <img src="./picture/people/2.jpg" alt="Ольга Ивановна">
                         <h3 class="contact-subtitle">Ольга Иванова</h3>
                             <p class="contact-text">Frontend Developer</p>
                                 <ul class="list-soc">
@@ -95,7 +103,7 @@
                                     <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
-                    <li class="item"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
+                    <li class="item-border"> <img src="./picture/people/3.jpg" alt="Андрей Шевченко">
                         <h3 class="contact-subtitle">Андрей Шевченко</h3>
                             <p class="contact-text">Marketing</p>
                                 <ul class="list-soc">
@@ -105,7 +113,7 @@
                                     <li class="item"><a href=""><img src="./picture/soc/main-Ellipse4.svg" alt="in"></a></li>
                                 </ul>
                     </li>
-                    <li class="item"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
+                    <li class="item-border"> <img src="./picture/people/4.jpg" alt="Иван Николаев">
                         <h3 class="contact-subtitle">Иван Николаев</h3>
                             <p class="contact-text">UI Designer</p>
                                 <ul class="list-soc">
